Fix MySQL Connection and Docker Networking

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,13 +14,15 @@ services:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
-      - ./backend/init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - devops_jobs_network
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-prootpassword"]
       timeout: 20s
       retries: 10
+      interval: 10s
+      start_period: 30s
+    restart: unless-stopped
 
   # Redis Cache
   redis:
@@ -36,6 +38,9 @@ services:
       test: ["CMD", "redis-cli", "ping"]
       timeout: 10s
       retries: 5
+      interval: 5s
+      start_period: 10s
+    restart: unless-stopped
 
   # Backend API
   backend:
@@ -45,13 +50,13 @@ services:
     container_name: devops_jobs_backend
     environment:
       - DATABASE_URL=mysql+pymysql://appuser:apppassword@mysql:3306/devops_jobs
-      - REDIS_HOST=redis
+      - REDIS_HOST=mysql
       - REDIS_PORT=6379
       - SECRET_KEY=your-secret-key-change-in-production
       - JWT_SECRET_KEY=your-jwt-secret-key-change-in-production
       - AWS_REGION=us-east-1
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:-}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY:-}
       - FROM_EMAIL=${FROM_EMAIL:-noreply@devopsjobs.com}
     ports:
       - "5000:5000"
@@ -62,9 +67,13 @@ services:
         condition: service_healthy
     networks:
       - devops_jobs_network
-    volumes:
-      - ./backend:/app
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000/api/health"]
+      timeout: 10s
+      retries: 5
+      interval: 30s
+      start_period: 40s
 
   # Frontend
   frontend:
@@ -77,7 +86,8 @@ services:
     ports:
       - "3000:3000"
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
     networks:
       - devops_jobs_network
     restart: unless-stopped
